--- a/package.json
+++ b/package.json
@@ -15,5 +15,26 @@
   "bugs": {
     "url": "https://github.com/Han-Jun-Peng/template-utils/issues"
   },
-  "homepage": "https://github.com/Han-Jun-Peng/template-utils#readme"
+  "homepage": "https://github.com/Han-Jun-Peng/template-utils#readme",
+  "devDependencies": {
+    "rollup": "catalog:",
+    "@rollup/plugin-typescript": "catalog:",
+    "tslib": "catalog:",
+    "@rollup/plugin-terser": "catalog:",
+    "typescript": "catalog:",
+    "prettier": "catalog:",
+    "eslint": "catalog:",
+    "typescript-eslint": "catalog:",
+    "jest": "catalog:",
+    "@types/jest": "catalog:",
+    "ts-jest": "catalog:",
+    "@babel/core": "catalog:",
+    "@babel/preset-env": "catalog:",
+    "@babel/preset-typescript": "catalog:",
+    "@babel/plugin-transform-runtime": "catalog:",
+    "@commitlint/cli": "catalog:",
+    "@commitlint/config-conventional": "catalog:",
+    "husky": "catalog:",
+    "lint-staged": "catalog:"
+  }
 }
