--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -4,7 +4,8 @@
 	"description": "这是一个demo, 表示一个js工具库",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"prettier": "prettier --write"
 	},
 	"repository": {
 		"type": "git",
