🐞 fix: 修复ts控制范围

--- a/packages/demo/tsconfig.json
+++ b/packages/demo/tsconfig.json
@@ -1,5 +1,6 @@
 {
 	"extends": "../../tsconfig.json",
+	"include": ["./src/**/*"],
 	"exclude": ["./__test__/*"],
 	"compilerOptions": {
 		"rootDir": "./src", // 源代码目录
