--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -25,6 +25,7 @@
 		"typescript": "catalog:",
 		"prettier": "catalog:",
 		"eslint": "catalog:",
+		"@eslint/js": "catalog:",
 		"typescript-eslint": "catalog:",
 		"jest": "catalog:",
 		"@types/jest": "catalog:",
