✨ feat: 新增属性-模块类型
将模块类型， 修改为es模块

--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"description": "这是一个demo, 表示一个js工具库",
 	"main": "index.js",
+	"type": "module",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"prettier": "prettier --write",
