✨ feat: 新增demo项目的发布相关属性

--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -6,6 +6,12 @@
 	"main": "./build/index.cjs.js",
 	"module": "./build/index.esm.js",
 	"browser": "./build/index.script.js",
+	"files": [
+		"./build"
+	],
+	"publishConfig": {
+		"registry": "https://registry.npmjs.org/"
+	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"prettier": "prettier --write",
