🐞 fix: 修改jest的依赖项
删除ts-jest, 替换成babel-jest

--- a/package.json
+++ b/package.json
@@ -24,15 +24,14 @@
 		"typescript": "catalog:",
 		"prettier": "catalog:",
 		"eslint": "catalog:",
+		"@eslint/js": "catalog:",
 		"typescript-eslint": "catalog:",
 		"jest": "catalog:",
-		"@eslint/js": "catalog:",
-		"@types/jest": "catalog:",
-		"ts-jest": "catalog:",
+		"@jest/globals": "catalog:",
+		"babel-jest": "catalog:",
 		"@babel/core": "catalog:",
 		"@babel/preset-env": "catalog:",
 		"@babel/preset-typescript": "catalog:",
-		"@babel/plugin-transform-runtime": "catalog:",
 		"@commitlint/cli": "catalog:",
 		"@commitlint/config-conventional": "catalog:",
 		"husky": "catalog:",
