--- a/babel.config.json
+++ b/babel.config.json
@@ -1,20 +1,6 @@
 {
 	"presets": [
-		[
-			"@babel/preset-env",
-			{
-				"targets": {
-					"edge": "17",
-					"firefox": "60",
-					"chrome": "67",
-					"safari": "11.1"
-				},
-				"useBuiltIns": "usage",
-				"corejs": "3.6.5",
-				"module": false // 不需要转换模块类型
-			}
-		],
+		["@babel/preset-env", { "targets": { "node": "current" } }],
 		"@babel/preset-typescript"
-	],
-	"plugins": [["@babel/plugin-transform-runtime"]]
+	]
 }
