--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
 	"version": "0.1.0",
 	"description": "这是一个用于开发javascript工具的模板仓库",
 	"scripts": {
-		"test": "jest"
+		"test": "jest",
+		"prettier": "prettier --write",
+		"eslint": "eslint"
 	},
+	"type": "module",
 	"keywords": [],
 	"author": "韩俊鹏",
 	"license": "MIT",
@@ -25,7 +28,7 @@
 		"prettier": "catalog:",
 		"eslint": "catalog:",
 		"@eslint/js": "catalog:",
-		"typescript-eslint": "catalog:",
+		"@types/eslint__js": "catalog:",
 		"jest": "catalog:",
 		"@jest/globals": "catalog:",
 		"babel-jest": "catalog:",
