--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -36,7 +36,7 @@
 		"prettier": "catalog:",
 		"eslint": "catalog:",
 		"@eslint/js": "catalog:",
-		"typescript-eslint": "catalog:",
+		"@types/eslint__js": "catalog:",
 		"jest": "catalog:",
 		"@jest/globals": "catalog:",
 		"babel-jest": "catalog:",
