--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -17,7 +17,7 @@ catalog:
   # 开发时 - 语法检测
   eslint: ^9.13.0
   "@eslint/js": ^10.0.0 # eslint官方推荐的配置项（检测js文件）
-  typescript-eslint: ^8.11.0 # eslint官方推荐的配置项（检测ts文件）
+  "@types/eslint__js": ^8.42.3 # 上一个的类型文件， 不安装就报错
 
   # 开发时 - 测试
   jest: ^29.7.0
