--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"scripts": {
 		"test": "jest",
 		"prettier": "prettier --write",
-		"eslint": "eslint"
+		"eslint": "eslint",
+		"ts": "tsc"
 	},
 	"type": "module",
 	"keywords": [],
