feat: 新增自动检测工具
引入husky, lint-staged,commitlint

--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
 	"scripts": {
 		"test": "jest",
 		"prettier": "prettier --write",
-		"eslint": "eslint",
-		"ts": "tsc"
+		"eslint": "eslint --fix",
+		"ts": "tsc --noEmit",
+		"prepare": "husky",
+		"lint": "lint-staged"
 	},
 	"type": "module",
 	"keywords": [],
