--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -34,3 +34,6 @@ catalog:
   # 提交前, 做检测
   husky: ^9.1.6 # 提交时，触发钩子，来做做上述检测
   lint-staged: ^15.2.10 # 让husky只检测暂存内容
+
+  # 发布
+  "@changesets/cli": ^2.27.9 # 子项目的版本管理
